Revision history for Dist-Zilla-Plugin-Stenciller-HtmlExamples

{{$NEXT}}
 [API Changes]

 [Bug Fixes]

 [Documentation]

 [Enhancements]

 [New Features]

 [Other Changes]

 [Requirements]

 [Testing]

0.0200 2016-01-27T18:29:46Z UTC
 [Other Changes]
 - No longer uses block package syntax, so should work on 5.10+ (once
   Stenciller does).

 [Requirements]
 - New prereq: namespace::autoclean.
 - Added missing prereqs: Moose, Path::Tiny.

0.0102 2016-01-10T15:34:21Z UTC
 [Bug Fixes]
 - Fixed failing test when used with latest Stenciller version (fixes #1).

 [Documentation]
 - Improved documentation.

 [Other Changes]
 - Regenerated dist.ini and weaver.ini from latest
   Dist::Iller::Config::Author::CSSON.

 [Requirements]
 - Bump Stenciller requirement to 0.1302, due to a change in
   Stenciller::Plugin::ToHtmlPreBlock output.
 - New requirements: MooseX::AttributeDocumented, String::Stomp and
   Syntax::Feature::Qs.

0.0101 2015-11-23T15:27:02Z UTC
 [Enhancements]
 - Added support for new attributes in Stenciller::Plugin::ToHtmlPreBlock.

 [Requirements]
 - Bump Stenciller requirement to 0.1301.

0.0100 2015-11-23T00:33:45Z UTC
 - Initial release