@@ -1,5 +1,8 @@
+sudo: false
 language: perl
 perl:
+   - '5.10'
+   - '5.12'
    - '5.14'
    - '5.16'
    - '5.18'
@@ -8,11 +11,6 @@ perl:
 matrix:
    fast_finish: true
 before_install:
-   - export AUTOMATED_TESTING=1 NONINTERACTIVE_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
-   - git clone git://github.com/haarg/perl-travis-helper
-   - source perl-travis-helper/init
-   - build-perl
-   - perl -V
    - git config --global user.name "TravisCI"
    - git config --global user.email $HOSTNAME":not-for-mail@travis-ci.org"
 install:
