@@ -4,13 +4,13 @@
       "Erik Carlsson <info@code301.com>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 5.043, Dist::Iller version 0.1204, CPAN::Meta::Converter version 2.143240",
+   "generated_by" : "Dist::Zilla version 5.043, Dist::Iller version 0.1408, CPAN::Meta::Converter version 2.143240",
    "license" : [
       "perl_5"
    ],
    "meta-spec" : {
       "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
-      "version" : "2"
+      "version" : 2
    },
    "name" : "Dist-Zilla-Plugin-Stenciller-HtmlExamples",
    "no_index" : {
@@ -32,87 +32,100 @@
       },
       "develop" : {
          "requires" : {
-            "Dist::Iller::Config::Author::CSSON" : "0",
-            "Dist::Zilla::Plugin::CheckChangesHasContent" : "0",
-            "Dist::Zilla::Plugin::Clean" : "0",
+            "Badge::Depot" : "0.0103",
+            "Badge::Depot::Plugin::Coverage" : "0",
+            "Badge::Depot::Plugin::Cpantesters" : "0",
+            "Badge::Depot::Plugin::Kwalitee" : "0",
+            "Badge::Depot::Plugin::Perl" : "0",
+            "Badge::Depot::Plugin::Travis" : "0",
+            "Dist::Zilla" : "5.000",
+            "Dist::Zilla::Plugin::Authority" : "1.009",
+            "Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional" : "0.007",
+            "Dist::Zilla::Plugin::ChangeStats::Dependencies::Git" : "0.0100",
+            "Dist::Zilla::Plugin::CheckChangesHasContent" : "0.008",
+            "Dist::Zilla::Plugin::Clean" : "0.07",
             "Dist::Zilla::Plugin::ConfirmRelease" : "0",
-            "Dist::Zilla::Plugin::CopyFilesFromBuild" : "0",
+            "Dist::Zilla::Plugin::CopyFilesFromBuild" : "0.151680",
             "Dist::Zilla::Plugin::DistIller::MetaGeneratedBy" : "0",
             "Dist::Zilla::Plugin::ExecDir" : "0",
+            "Dist::Zilla::Plugin::Git" : "2.036",
             "Dist::Zilla::Plugin::Git::Check" : "0",
-            "Dist::Zilla::Plugin::Git::Contributors" : "0",
+            "Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch" : "0.013",
+            "Dist::Zilla::Plugin::Git::Commit" : "0",
+            "Dist::Zilla::Plugin::Git::Contributors" : "0.017",
             "Dist::Zilla::Plugin::Git::GatherDir" : "0",
             "Dist::Zilla::Plugin::Git::Push" : "0",
             "Dist::Zilla::Plugin::Git::Tag" : "0",
-            "Dist::Zilla::Plugin::GithubMeta" : "0",
-            "Dist::Zilla::Plugin::InstallRelease" : "0",
+            "Dist::Zilla::Plugin::GithubMeta" : "0.54",
+            "Dist::Zilla::Plugin::InstallRelease" : "0.008",
             "Dist::Zilla::Plugin::License" : "0",
             "Dist::Zilla::Plugin::MakeMaker" : "0",
             "Dist::Zilla::Plugin::Manifest" : "0",
             "Dist::Zilla::Plugin::ManifestSkip" : "0",
             "Dist::Zilla::Plugin::MetaJSON" : "0",
             "Dist::Zilla::Plugin::MetaNoIndex" : "0",
-            "Dist::Zilla::Plugin::MetaProvides::Class" : "0",
-            "Dist::Zilla::Plugin::MetaProvides::Package" : "0",
+            "Dist::Zilla::Plugin::MetaProvides::Package" : "2.003001",
             "Dist::Zilla::Plugin::MetaYAML" : "0",
-            "Dist::Zilla::Plugin::NextRelease" : "0",
-            "Dist::Zilla::Plugin::NextVersion::Semantic" : "0",
-            "Dist::Zilla::Plugin::OurPkgVersion" : "0",
+            "Dist::Zilla::Plugin::NextRelease::Grouped" : "0.0200",
             "Dist::Zilla::Plugin::PodSyntaxTests" : "0",
-            "Dist::Zilla::Plugin::PodWeaver" : "0",
-            "Dist::Zilla::Plugin::PodnameFromClassname" : "0",
+            "Dist::Zilla::Plugin::PodWeaver" : "4.006",
             "Dist::Zilla::Plugin::Prereqs" : "0",
-            "Dist::Zilla::Plugin::Prereqs::Plugins" : "0",
-            "Dist::Zilla::Plugin::PreviousVersion::Changelog" : "0",
             "Dist::Zilla::Plugin::Readme" : "0",
-            "Dist::Zilla::Plugin::ReadmeAnyFromPod" : "0",
-            "Dist::Zilla::Plugin::ReversionOnRelease" : "0",
-            "Dist::Zilla::Plugin::RunExtraTests" : "0",
+            "Dist::Zilla::Plugin::ReadmeAnyFromPod" : "0.150250",
+            "Dist::Zilla::Plugin::RewriteVersion::Transitional" : "0.007",
+            "Dist::Zilla::Plugin::RunExtraTests" : "0.028",
             "Dist::Zilla::Plugin::ShareDir" : "0",
-            "Dist::Zilla::Plugin::Test::Compile" : "0",
-            "Dist::Zilla::Plugin::Test::EOF" : "0",
-            "Dist::Zilla::Plugin::Test::EOL" : "0",
-            "Dist::Zilla::Plugin::Test::Kwalitee::Extra" : "0",
-            "Dist::Zilla::Plugin::Test::NoTabs" : "0",
-            "Dist::Zilla::Plugin::Test::ReportPrereqs" : "0",
-            "Dist::Zilla::Plugin::Test::Version" : "0",
+            "Dist::Zilla::Plugin::Test::Compile" : "2.054",
+            "Dist::Zilla::Plugin::Test::EOF" : "0.0501",
+            "Dist::Zilla::Plugin::Test::EOL" : "0.18",
+            "Dist::Zilla::Plugin::Test::Kwalitee::Extra" : "v0.2.1",
+            "Dist::Zilla::Plugin::Test::NoTabs" : "0.15",
+            "Dist::Zilla::Plugin::Test::ReportPrereqs" : "0.021",
+            "Dist::Zilla::Plugin::Test::Version" : "1.05",
             "Dist::Zilla::Plugin::TestRelease" : "0",
-            "Dist::Zilla::Plugin::TravisYML" : "0",
+            "Dist::Zilla::Plugin::TravisYML" : "1.15",
             "Dist::Zilla::Plugin::UploadToCPAN" : "0",
             "Pod::Elemental::Transformer::List" : "0",
-            "Pod::Elemental::Transformer::Splint" : "0",
+            "Pod::Elemental::Transformer::Splint" : "0.1201",
             "Pod::Weaver::Plugin::SingleEncoding" : "0",
             "Pod::Weaver::Plugin::Transformer" : "0",
             "Pod::Weaver::PluginBundle::CorePrep" : "0",
             "Pod::Weaver::Section::Authors" : "0",
-            "Pod::Weaver::Section::Badges" : "0",
+            "Pod::Weaver::Section::Badges" : "0.0401",
             "Pod::Weaver::Section::Collect" : "0",
+            "Pod::Weaver::Section::GenerateSection" : "1.01",
             "Pod::Weaver::Section::Generic" : "0",
-            "Pod::Weaver::Section::Homepage::DefaultCPAN" : "0",
             "Pod::Weaver::Section::Leftovers" : "0",
             "Pod::Weaver::Section::Legal" : "0",
             "Pod::Weaver::Section::Name" : "0",
             "Pod::Weaver::Section::Region" : "0",
-            "Pod::Weaver::Section::Source::DefaultGitHub" : "0",
             "Pod::Weaver::Section::Version" : "0",
+            "Test::EOF" : "0",
             "Test::EOL" : "0",
-            "Test::More" : "0",
-            "Test::NoTabs" : "0",
+            "Test::More" : "0.88",
+            "Test::NoTabs" : "1.4",
             "Test::Pod" : "1.41",
-            "Test::Warnings" : "0"
+            "Test::Version" : "1",
+            "Test::Warnings" : "0.026"
+         },
+         "suggests" : {
+            "Dist::Iller" : "0.1408",
+            "Dist::Iller::Config::Author::CSSON" : "0.0309"
          }
       },
       "runtime" : {
          "requires" : {
             "Dist::Zilla::File::InMemory" : "0",
-            "Moose" : "2.1400",
-            "MooseX::AttributeDocumented" : "0",
-            "Path::Tiny" : "0",
-            "Stenciller" : "0.1302",
+            "Moose" : "2.1405",
+            "MooseX::AttributeDocumented" : "0.1003",
+            "Path::Tiny" : "0.072",
+            "Stenciller" : "0.1400",
             "String::Stomp" : "0",
             "Syntax::Feature::Qs" : "0.2004",
-            "namespace::autoclean" : "0.18",
-            "perl" : "5.014000",
+            "Types::Path::Tiny" : "0.005",
+            "Types::Standard" : "1.000005",
+            "namespace::autoclean" : "0.22",
+            "perl" : "5.010000",
             "syntax" : "0"
          }
       },
@@ -126,7 +139,7 @@
             "File::Temp" : "0",
             "IO::Handle" : "0",
             "IPC::Open3" : "0",
-            "Path::Tiny" : "0",
+            "Path::Tiny" : "0.072",
             "String::Cushion" : "0",
             "Syntax::Feature::Qi" : "0",
             "Test::DZil" : "0",
@@ -139,7 +152,7 @@
    "provides" : {
       "Dist::Zilla::Plugin::Stenciller::HtmlExamples" : {
          "file" : "lib/Dist/Zilla/Plugin/Stenciller/HtmlExamples.pm",
-         "version" : "0.0200"
+         "version" : "0.0201"
       }
    },
    "release_status" : "stable",
@@ -154,6 +167,7 @@
          "web" : "https://github.com/Csson/p5-Dist-Zilla-Plugin-Stenciller-HtmlExamples"
       }
    },
-   "version" : "0.0200"
+   "version" : "0.0201",
+   "x_authority" : "cpan:CSSON"
 }
 
