@@ -1,6 +1,6 @@
-; This file was auto-generated from iller.yaml on 2016-01-27 18:18:43 UTC.
-; Used configs:
-; * Dist::Iller::Config::Author::CSSON: 0.0200
+; This file was auto-generated from iller.yaml by Dist::Iller on 2016-03-23 19:42:18 UTC.
+; The following configs were used:
+; * Dist::Iller::Config::Author::CSSON: 0.0309
 
 name = Dist-Zilla-Plugin-Stenciller-HtmlExamples
 author = Erik Carlsson <info@code301.com>
@@ -19,24 +19,32 @@ copy = META.json
 copy = LICENSE
 copy = Makefile.PL
 
-[ReversionOnRelease]
-prompt = 1
+[Authority]
+authority = cpan:CSSON
+locate_comment = 1
 
-[OurPkgVersion]
+[RewriteVersion::Transitional]
 
-[PodnameFromClassname]
+[ChangeStats::Dependencies::Git]
+add_to_first_release = 1
+do_stats = 1
+group = Stats & Dependency Changes
+stats_skip_file = META.json
+stats_skip_file = Changes
+stats_skip_file = LICENSE
+stats_skip_file = dist.ini
+stats_skip_file = weaver.ini
+stats_skip_file = cpanfile
+stats_skip_file = .gitignore
+stats_skip_file = .travis.yml
+stats_skip_file = Makefile.PL
+stats_skip_file = README.md
+stats_text =
 
-[NextRelease]
-format = %v  %{yyyy-MM-dd HH:mm:ss VVV}d
-
-[PreviousVersion::Changelog]
-
-[NextVersion::Semantic]
-format = %d.%02d%02d
-major =
-minor = API Changes, New Features, Enhancements
-numify_version = 0
-revision = Requirements, Testing, Other Changes, Bug Fixes, Documentation
+[NextRelease::Grouped]
+auto_order = 0
+format_date = %{yyyy-MM-dd HH:mm:ss VVV}d
+groups = API Changes, New Features, Enhancements, Requirements, Testing, Other Changes, Bug Fixes, Documentation, Stats & Dependency Changes
 
 [PodWeaver]
 
@@ -68,13 +76,9 @@ directory = eg
 directory = examples
 directory = t/corpus
 
-[Prereqs::Plugins]
-
 [MakeMaker]
 
 [MetaJSON]
-
-[MetaProvides::Class]
 
 [MetaProvides::Package]
 
@@ -114,6 +118,10 @@ directory = t/corpus
 
 [CheckChangesHasContent]
 
+[Git::CheckFor::CorrectBranch]
+release_branch = master
+release_branch = release
+
 [TestRelease]
 
 [ConfirmRelease]
@@ -121,56 +129,123 @@ directory = t/corpus
 [UploadToCPAN]
 
 [TravisYML]
-perl_version = 5.14 5.16 5.18 5.20 5.22
+perl_version = 5.10 5.12 5.14 5.16 5.18 5.20 5.22
+
+[Git::Commit / CommitBeforeTag]
+allow_dirty_match = .
+commit_msg = Release %v%n%n%c
 
 [Git::Tag]
 tag_format = %v
-tag_message =
-
-[Git::Push]
-remotes_must_exist = 1
+tag_message = Release %v%n%n%c
 
 [InstallRelease]
 install_command = cpanm .
 
+[BumpVersionAfterRelease::Transitional]
+
+[Git::Commit / CommitAfterRelease]
+allow_dirty_match = .
+commit_msg = Bump version after %v
+
+[Git::Push]
+remotes_must_exist = 1
+
 [Clean]
 
 [Prereqs / DevelopRequires]
-Dist::Iller::Config::Author::CSSON = 0
+Badge::Depot = 0.0103
+Badge::Depot::Plugin::Coverage = 0
+Badge::Depot::Plugin::Cpantesters = 0
+Badge::Depot::Plugin::Kwalitee = 0
+Badge::Depot::Plugin::Perl = 0
+Badge::Depot::Plugin::Travis = 0
+Dist::Zilla = 5.000
+Dist::Zilla::Plugin::Authority = 1.009
+Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0.007
+Dist::Zilla::Plugin::ChangeStats::Dependencies::Git = 0.0100
+Dist::Zilla::Plugin::CheckChangesHasContent = 0.008
+Dist::Zilla::Plugin::Clean = 0.07
+Dist::Zilla::Plugin::ConfirmRelease = 0
+Dist::Zilla::Plugin::CopyFilesFromBuild = 0.151680
+Dist::Zilla::Plugin::DistIller::MetaGeneratedBy = 0
+Dist::Zilla::Plugin::ExecDir = 0
+Dist::Zilla::Plugin::Git = 2.036
+Dist::Zilla::Plugin::Git::Check = 0
+Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch = 0.013
+Dist::Zilla::Plugin::Git::Commit = 0
+Dist::Zilla::Plugin::Git::Contributors = 0.017
+Dist::Zilla::Plugin::Git::GatherDir = 0
+Dist::Zilla::Plugin::Git::Push = 0
+Dist::Zilla::Plugin::Git::Tag = 0
+Dist::Zilla::Plugin::GithubMeta = 0.54
+Dist::Zilla::Plugin::InstallRelease = 0.008
+Dist::Zilla::Plugin::License = 0
+Dist::Zilla::Plugin::MakeMaker = 0
+Dist::Zilla::Plugin::Manifest = 0
+Dist::Zilla::Plugin::ManifestSkip = 0
+Dist::Zilla::Plugin::MetaJSON = 0
+Dist::Zilla::Plugin::MetaNoIndex = 0
+Dist::Zilla::Plugin::MetaProvides::Package = 2.003001
+Dist::Zilla::Plugin::MetaYAML = 0
+Dist::Zilla::Plugin::NextRelease::Grouped = 0.0200
+Dist::Zilla::Plugin::PodSyntaxTests = 0
+Dist::Zilla::Plugin::PodWeaver = 4.006
+Dist::Zilla::Plugin::Prereqs = 0
+Dist::Zilla::Plugin::Readme = 0
+Dist::Zilla::Plugin::ReadmeAnyFromPod = 0.150250
+Dist::Zilla::Plugin::RewriteVersion::Transitional = 0.007
+Dist::Zilla::Plugin::RunExtraTests = 0.028
+Dist::Zilla::Plugin::ShareDir = 0
+Dist::Zilla::Plugin::Test::Compile = 2.054
+Dist::Zilla::Plugin::Test::EOF = 0.0501
+Dist::Zilla::Plugin::Test::EOL = 0.18
+Dist::Zilla::Plugin::Test::Kwalitee::Extra = v0.2.1
+Dist::Zilla::Plugin::Test::NoTabs = 0.15
+Dist::Zilla::Plugin::Test::ReportPrereqs = 0.021
+Dist::Zilla::Plugin::Test::Version = 1.05
+Dist::Zilla::Plugin::TestRelease = 0
+Dist::Zilla::Plugin::TravisYML = 1.15
+Dist::Zilla::Plugin::UploadToCPAN = 0
 Pod::Elemental::Transformer::List = 0
-Pod::Elemental::Transformer::Splint = 0
+Pod::Elemental::Transformer::Splint = 0.1201
 Pod::Weaver::Plugin::SingleEncoding = 0
 Pod::Weaver::Plugin::Transformer = 0
 Pod::Weaver::PluginBundle::CorePrep = 0
 Pod::Weaver::Section::Authors = 0
-Pod::Weaver::Section::Badges = 0
+Pod::Weaver::Section::Badges = 0.0401
 Pod::Weaver::Section::Collect = 0
+Pod::Weaver::Section::GenerateSection = 1.01
 Pod::Weaver::Section::Generic = 0
-Pod::Weaver::Section::Homepage::DefaultCPAN = 0
 Pod::Weaver::Section::Leftovers = 0
 Pod::Weaver::Section::Legal = 0
 Pod::Weaver::Section::Name = 0
 Pod::Weaver::Section::Region = 0
-Pod::Weaver::Section::Source::DefaultGitHub = 0
 Pod::Weaver::Section::Version = 0
-Test::NoTabs = 0
-Test::Warnings = 0
+Test::NoTabs = 1.4
+Test::Warnings = 0.026
+
+[Prereqs / DevelopSuggests]
+Dist::Iller = 0.1408
+Dist::Iller::Config::Author::CSSON = 0.0309
 
 [Prereqs / RuntimeRequires]
 Dist::Zilla::File::InMemory = 0
-Moose = 2.1400
-MooseX::AttributeDocumented = 0
-Path::Tiny = 0
-Stenciller = 0.1302
+Moose = 2.1405
+MooseX::AttributeDocumented = 0.1003
+Path::Tiny = 0.072
+Stenciller = 0.1400
 String::Stomp = 0
 Syntax::Feature::Qs = 0.2004
-namespace::autoclean = 0.18
-perl = 5.014000
+Types::Path::Tiny = 0.005
+Types::Standard = 1.000005
+namespace::autoclean = 0.22
+perl = 5.010000
 syntax = 0
 
 [Prereqs / TestRequires]
 File::Temp = 0
-Path::Tiny = 0
+Path::Tiny = 0.072
 String::Cushion = 0
 Syntax::Feature::Qi = 0
 Test::DZil = 0
@@ -178,37 +253,73 @@ Test::Differences = 0
 Test::More = 0.96
 syntax = 0
 
-; authordep Stenciller
-; authordep Dist::Zilla::File::InMemory
-; authordep syntax
-; authordep Syntax::Feature::Qs
-; authordep String::Stomp
-; authordep Moose
-; authordep namespace::autoclean
-; authordep Path::Tiny
-; authordep MooseX::AttributeDocumented
-; authordep Test::DZil
-; authordep Test::Differences
-; authordep File::Temp
-; authordep Syntax::Feature::Qi
-; authordep String::Cushion
-; authordep Dist::Iller::Config::Author::CSSON
-; authordep Test::Warnings
-; authordep Test::NoTabs
-; authordep Test::More
-; authordep Pod::Weaver::PluginBundle::CorePrep
-; authordep Pod::Weaver::Plugin::SingleEncoding
-; authordep Pod::Weaver::Section::Name
-; authordep Pod::Weaver::Section::Badges
-; authordep Pod::Weaver::Section::Version
-; authordep Pod::Weaver::Section::Region
-; authordep Pod::Weaver::Section::Generic
-; authordep Pod::Weaver::Section::Collect
-; authordep Pod::Weaver::Section::Leftovers
-; authordep Pod::Weaver::Section::Source::DefaultGitHub
-; authordep Pod::Weaver::Section::Homepage::DefaultCPAN
-; authordep Pod::Weaver::Section::Authors
-; authordep Pod::Weaver::Section::Legal
-; authordep Pod::Elemental::Transformer::List
-; authordep Pod::Weaver::Plugin::Transformer
-; authordep Pod::Elemental::Transformer::Splint
+; authordep Badge::Depot = 0.0103
+; authordep Badge::Depot::Plugin::Coverage = 0
+; authordep Badge::Depot::Plugin::Cpantesters = 0
+; authordep Badge::Depot::Plugin::Kwalitee = 0
+; authordep Badge::Depot::Plugin::Perl = 0
+; authordep Badge::Depot::Plugin::Travis = 0
+; authordep Dist::Zilla = 5.000
+; authordep Dist::Zilla::Plugin::Authority = 1.009
+; authordep Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0.007
+; authordep Dist::Zilla::Plugin::ChangeStats::Dependencies::Git = 0.0100
+; authordep Dist::Zilla::Plugin::CheckChangesHasContent = 0.008
+; authordep Dist::Zilla::Plugin::Clean = 0.07
+; authordep Dist::Zilla::Plugin::ConfirmRelease = 0
+; authordep Dist::Zilla::Plugin::CopyFilesFromBuild = 0.151680
+; authordep Dist::Zilla::Plugin::DistIller::MetaGeneratedBy = 0
+; authordep Dist::Zilla::Plugin::ExecDir = 0
+; authordep Dist::Zilla::Plugin::Git = 2.036
+; authordep Dist::Zilla::Plugin::Git::Check = 0
+; authordep Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch = 0.013
+; authordep Dist::Zilla::Plugin::Git::Commit = 0
+; authordep Dist::Zilla::Plugin::Git::Contributors = 0.017
+; authordep Dist::Zilla::Plugin::Git::GatherDir = 0
+; authordep Dist::Zilla::Plugin::Git::Push = 0
+; authordep Dist::Zilla::Plugin::Git::Tag = 0
+; authordep Dist::Zilla::Plugin::GithubMeta = 0.54
+; authordep Dist::Zilla::Plugin::InstallRelease = 0.008
+; authordep Dist::Zilla::Plugin::License = 0
+; authordep Dist::Zilla::Plugin::MakeMaker = 0
+; authordep Dist::Zilla::Plugin::Manifest = 0
+; authordep Dist::Zilla::Plugin::ManifestSkip = 0
+; authordep Dist::Zilla::Plugin::MetaJSON = 0
+; authordep Dist::Zilla::Plugin::MetaNoIndex = 0
+; authordep Dist::Zilla::Plugin::MetaProvides::Package = 2.003001
+; authordep Dist::Zilla::Plugin::MetaYAML = 0
+; authordep Dist::Zilla::Plugin::NextRelease::Grouped = 0.0200
+; authordep Dist::Zilla::Plugin::PodSyntaxTests = 0
+; authordep Dist::Zilla::Plugin::PodWeaver = 4.006
+; authordep Dist::Zilla::Plugin::Prereqs = 0
+; authordep Dist::Zilla::Plugin::Readme = 0
+; authordep Dist::Zilla::Plugin::ReadmeAnyFromPod = 0.150250
+; authordep Dist::Zilla::Plugin::RewriteVersion::Transitional = 0.007
+; authordep Dist::Zilla::Plugin::RunExtraTests = 0.028
+; authordep Dist::Zilla::Plugin::ShareDir = 0
+; authordep Dist::Zilla::Plugin::Test::Compile = 2.054
+; authordep Dist::Zilla::Plugin::Test::EOF = 0.0501
+; authordep Dist::Zilla::Plugin::Test::EOL = 0.18
+; authordep Dist::Zilla::Plugin::Test::Kwalitee::Extra = v0.2.1
+; authordep Dist::Zilla::Plugin::Test::NoTabs = 0.15
+; authordep Dist::Zilla::Plugin::Test::ReportPrereqs = 0.021
+; authordep Dist::Zilla::Plugin::Test::Version = 1.05
+; authordep Dist::Zilla::Plugin::TestRelease = 0
+; authordep Dist::Zilla::Plugin::TravisYML = 1.15
+; authordep Dist::Zilla::Plugin::UploadToCPAN = 0
+; authordep Pod::Elemental::Transformer::List = 0
+; authordep Pod::Elemental::Transformer::Splint = 0.1201
+; authordep Pod::Weaver::Plugin::SingleEncoding = 0
+; authordep Pod::Weaver::Plugin::Transformer = 0
+; authordep Pod::Weaver::PluginBundle::CorePrep = 0
+; authordep Pod::Weaver::Section::Authors = 0
+; authordep Pod::Weaver::Section::Badges = 0.0401
+; authordep Pod::Weaver::Section::Collect = 0
+; authordep Pod::Weaver::Section::GenerateSection = 1.01
+; authordep Pod::Weaver::Section::Generic = 0
+; authordep Pod::Weaver::Section::Leftovers = 0
+; authordep Pod::Weaver::Section::Legal = 0
+; authordep Pod::Weaver::Section::Name = 0
+; authordep Pod::Weaver::Section::Region = 0
+; authordep Pod::Weaver::Section::Version = 0
+; authordep Test::NoTabs = 1.4
+; authordep Test::Warnings = 0.026
