@@ -1,6 +1,6 @@
-; This file was auto-generated from iller.yaml on 2016-01-27 18:15:21 UTC.
-; Used configs:
-; * Dist::Iller::Config::Author::CSSON: 0.0200
+; This file was auto-generated from iller.yaml by Dist::Iller on 2016-03-23 19:42:18 UTC.
+; The following configs were used:
+; * Dist::Iller::Config::Author::CSSON: 0.0309
 
 [@CorePrep]
 
@@ -11,6 +11,8 @@
 [Badges]
 badge = perl
 badge = travis
+badge = kwalitee
+badge = cpantesters
 badge = coverage
 formats = html, markdown
 
@@ -38,11 +40,11 @@ command = func
 
 [Region / postlude]
 
-[Source::DefaultGitHub]
-text = L<%s>
+[GenerateSection / SOURCE]
+text = L<{{$repository_web}}>
 
-[Homepage::DefaultCPAN]
-text = L<%s>
+[GenerateSection / HOMEPAGE]
+text = L<{{$homepage}}>
 
 [Authors]
 
